[package]
name = "recode_rs"
version = "1.0.4"
authors = ["Henri Sivonen <hsivonen@hsivonen.fi>"]
description = "Command-line tool for converting between the character encodings defined in the Encoding Standard."
license = "MIT/Apache-2.0"
readme = "README.md"
documentation = "https://github.com/hsivonen/recode_rs"
homepage = "https://github.com/hsivonen/recode_rs"
repository = "https://github.com/hsivonen/recode_rs"
keywords = ["encoding", "charset"]
categories = ["text-processing", "encoding", "command-line-utilities"]

[features]
simd-accel = ["encoding_rs/simd-accel"]
no-static-ideograph-encoder-tables = ["encoding_rs/no-static-ideograph-encoder-tables"]

[dependencies]
getopts = "0.2.14"
encoding_rs = "0.7.0"

[profile.release]
lto = true
